--- a/Auto_segmentation_workshop.ipynb
+++ b/Auto_segmentation_workshop.ipynb
@@ -104,11 +104,7 @@
     "if IN_COLAB:\n",
     "    !wget https://www.dropbox.com/s/rng7h9mgkwaolt8/utils.py?dl=0 -O /content/utils.py\n",
     "else:\n",
-    "    !wget https://www.dropbox.com/s/rng7h9mgkwaolt8/utils.py?dl=0 -O ./utils.py\n",
-    "\n",
-    "\n",
-    "# ## Network weights\n",
-    "# !wget https://www.dropbox.com/s/nl6kavhfm3x2qtu/pretrained_checkpoint.ckpt?dl=0 -O /content/pretrained_checkpoint.ckpt"
+    "    !wget https://www.dropbox.com/s/rng7h9mgkwaolt8/utils.py?dl=0 -O ./utils.py"
    ]
   },
   {
