--- a/Part_1_abdominal_autoseg.ipynb
+++ b/Part_1_abdominal_autoseg.ipynb
@@ -36,9 +36,12 @@
    "metadata": {},
    "source": [
     "# How to use Colab \n",
-    "Colab is a free ML playground from google. It allows you free access to limited resources, including a GPU and some storage space. Even though the limits are quite small: ~30GB disk, 12GB RAM & a random GPU from K80 up to P100, you can do some pretty cool stuff with it. __You will need a Google account to sign into it.__\n",
+    "Colab is a free ML playground from google. It allows you free access to limited resources, including a GPU and some storage space. Even though the limits are quite small: ~30GB disk, 12GB RAM & a random GPU from K80 up to P100, you can do some pretty cool stuff with it. \n",
+    "\n",
+    "__You will need a Google account to sign into it.__\n",
     "\n",
     "*Important*:\n",
+    "\n",
     "We are going to be training a Convolutional Neural Network (CNN), so we need to get a GPU. To do this, click \"Runtime\" in the menu across the top of the colab page, then select \"Change Runtime Type\". From the dropdown, select GPU and click Save. The runtime will then reboot and you should have a GPU. To find out what you got, run the cell below this text."
    ]
   },
@@ -119,7 +122,7 @@
    "source": [
     "## 0. Install prerequisites\n",
     "\n",
-    "Here we install the segmentation-models library, along with pytorch-lightning and tqdm (for fancy progress bars)."
+    "Here we install the `segmentation-models` library, along with `pytorch-lightning` and `tqdm` (for fancy progress bars)."
    ]
   },
   {
